--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,11 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-toolkit": "^1.1.2",
+    "slick-carousel": "^1.8.1",
+    "stripe": "^11.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
