--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.9",
+    "@stripe/react-stripe-js": "^1.16.5",
+    "@stripe/stripe-js": "^1.47.0",
+    "@testing-library/react": "github:testing-library/user-event",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
     "cjs-loader": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -22,7 +28,20 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "^17.0.2",
+    "react-paypal-button-v2": "^2.6.3",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "react-smart-payment-buttons": "^0.2.3",
+    "slick-carousel": "^1.8.1",
+    "stripe": "^11.12.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5"
+  }
 }
